<resources>
    <string name="app_name">CoffeeShop</string>
    <string name="hint_email">Email</string>
    <string name="hint_password"> Password </string>
    <string name="hint_login">Login</string>
    <string name="hint_register">Dont have an account? Register</string>
    <string name="hint_forgetPassword">Forget Password?</string>
    <string name="hint_username">Username</string>
    <string name="hint_repeatPassword">Repeat Password</string>
    <string name="hint_signup">Sign Up</string>
    <string name="latte">Hot latte</string>
    <string name="hint_yourprofile">Your Profile</string>
    <string name="hint_viewCard">View Card</string>
    <string name="hint_Menu">Menu</string>
    <string name="hint_logout">Logout</string>
</resources>