<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".choicesActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="220dp"
        android:layout_height="224dp"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:id="@+id/btn_profile"
        android:hint="@string/hint_yourprofile"
        android:textSize="24dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:id="@+id/btn_menu"
        android:hint="@string/hint_Menu"
        android:textSize="24dp"
        android:textColor="@color/purple_500"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:id="@+id/btn_viewCard"
        android:hint="@string/hint_viewCard"
        android:textColor="@color/purple_200"
        android:textSize="24dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:id="@+id/btn_logout"
        android:hint="@string/hint_logout"
        android:textColor="@color/purple_200"
        android:textSize="24dp"
        />


</LinearLayout>